Version 0.7.0
- Recoded a lot of the plugin to support HuskyCore (DO NOT WORRY THIS IS BUILT INTO THE PLUGIN <3)
- Updated SubCommands to handle tab completion
- Improved the main settlements command
- Claim persistent data has been converted to chunk data
- Added Teleportation setting in config (suggested by @Leloukoz)
- Added More configuration options
- Added Flags for each settlement (They currently do nothing, will be fully functional in next update)
- Changed CommandLabel from enum to class
- Fixed some Localisation
- Fixed Roles lore displaying as string instead of list
- Massively improved performance of chunk handling